--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
 
   <title>Automóveis Flux</title>
 
+<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
+
+  <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css">
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -20,6 +23,7 @@
   <link href='https://fonts.googleapis.com/css?family=Droid+Serif:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
   <link href='https://fonts.googleapis.com/css?family=Roboto+Slab:400,100,300,700' rel='stylesheet' type='text/css'>
 
+  
   <!-- Custom styles for this template -->
   <link href="css/agency.min.css" rel="stylesheet">
 
@@ -196,8 +200,29 @@
         <div class="modal-header">
           <form role="form">
             <div class="form-group">
+
+                <div class="input-group margin-bottom-sm">
+                  <span class="input-group-addon"><i class="fas fa-envelope fa-fw"></i></span>
+                  <input class="form-control" type="text" placeholder="Email" required autofocus>
+                </div>
+                <div class="input-group">
+                  <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
+                  <input class="form-control" type="password" placeholder="Senha" required autofocus>
+                </div>
+               <!-- body 
+                  <div class="input-group margin-bottom-sm">
+                      <span class="input-group-addon"><i class="fa fa-envelope-o fa-fw"></i></span>
+                      <input class="form-control" type="text" placeholder="Email address">
+                  </div>
+                  <div class="input-group">
+                      <span class="input-group-addon"><i class="fa fa-key fa-fw"></i></span>
+                      <input class="form-control" type="password" placeholder="Password">
+                  </div>
+
+
+
               <input type="email" class="form-control" placeholder="Email" required autofocus />
-              <input type="password" class="form-control" placeholder="Senha" required autofocus/>
+              <input type="password" class="form-control" placeholder="Senha" required autofocus/>-->
             </div>
           </form>
         </div>
