--- a/index.html
+++ b/index.html
@@ -44,9 +44,10 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#services">Serviços</a>
           </li>
+
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#Cadastro">Cadastro Garagem</a>
-          </li>
+            <a class="nav-link js-scroll-trigger" data-toggle="modal" >Cadastro de Garagem</a>
+          </li>   
 
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" data-toggle="modal" data-target="#cadas1" >Cadastro</a>
@@ -55,7 +56,7 @@
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" href="#contact">Contato</a>
           </li>  <!-- -->
-      
+
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger"  data-toggle="modal" data-target="#exampleModal">login </a>
           </li>
@@ -72,7 +73,7 @@
   <header class="masthead">
     <div class="container">
       <div class="intro-text">
-        <div class="intro-lead-in" style="color: ##FFFF00">Bem Vindo ao Automóveis Flux</div>
+        <div class="intro-lead-in" >Bem Vindo ao Automóveis Flux</div>
         <div class="intro-heading text-uppercase">Prazer em Recebê-lo</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mais SObre Nós</a>
       </div>
@@ -97,11 +98,11 @@
           <p class="text-muted"> Você não paga pela depreciação inicial sofrida pelo carro zero quilômetro. Os nossos carros têm cara de zero quilômetro e preço de seminovo.</p>
         </div>
         <div class="col-md-4">
-          <span class="fa-stack fa-4x">
+         <a href="mostrar.html"><span class="fa-stack fa-4x">
             <i class="fas fa-circle fa-stack-2x text-primary"></i>
             <i class="fas fa-laptop fa-stack-1x fa-inverse"></i>
-          </span>
-          <h4 class="service-heading">Ver Modelos</h4>
+          </span></a> 
+          <a href="mostrar.html"><h4 class="service-heading" >Ver Modelos</h4></a>
           <p class="text-muted">Você pode financiar com as melhores taxas do mercado, além de pagar a entrada em parcelas no seu cartão de crédito.</p>
         </div>
         <div class="col-md-4">
@@ -233,29 +234,25 @@
                 <form>
                     <div class="form-group">
                         <label for="inputName">Nome:</label> 
-                        <input type="text" class="form-control" id="nome" placeholder="Nome Completo" ng-model="cadastroNome">
+                        <input type="text" class="form-control" id="nome" placeholder="Nome Completo" ng-model="cadastroNome" required="autofocus">  
                     </div>
 
                     <div class="form-group">
                         <label for="inputCpf">CPF:</label> 
-                        <input type="text" class="form-control" id="cpf" placeholder="000.000.000-00" maxlength="14"  OnKeyPress="formatar('###.###.###-##', this)">
+                        <input type="text" class="form-control" id="cpf" placeholder="000.000.000-00" maxlength="14"  OnKeyPress="formatar('###.###.###-##', this)" required="autofocus">
                     </div>
 
                     <div class="form-group">
-                        <label for="inputEmail">Email:</label> <input type="email" class="form-control" id="email" placeholder="exemplo@outlook.com" ng-model="cadastroEmail">
+                        <label for="inputEmail">Email:</label> <input type="email" class="form-control" id="email" placeholder="exemplo@outlook.com" ng-model="cadastroEmail" required="autofocus">
                     </div>
 
                     <div class="form-group">
-                        <label for="inputTel" >Telefone:</label> <input class="form-control" id="telefone" maxlength="13" placeholder=" (00) 00000-0000" OnKeyPress="formatar('##-#####-####', this)">
+                        <label for="inputTel" >Telefone:</label> <input class="form-control" id="telefone" maxlength="13" placeholder=" (00) 00000-0000" OnKeyPress="formatar('##-#####-####', this)" required="autofocus">
                     </div>
 
                     <div class="form-group">
                         <label for="inputSenha">Senha:</label> 
-                        <input type="password" class="form-control" id="inputSenha" placeholder="Senha" ng-model="cadastroSenha">
-                    </div>
-                    <div class="form-group">
-                        <label for="inputConfSenha">Confirmação da Senha:</label> 
-                        <input type="password" class="form-control" id="inputConfSenha" placeholder="Confirme sua senha" ng-model="cadastroConfSenha">
+                        <input type="password" class="form-control" id="inputSenha" placeholder="Senha" ng-model="cadastroSenha" required="autofocus">
                     </div>
                 </form>
             </div>
