Alternado ordem de funcionalidade
Alterando nome de botão, cancelando redundancia

--- a/index.html
+++ b/index.html
@@ -41,9 +41,6 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#services">Serviços</a>
-          </li>
 
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger" data-toggle="modal" >Cadastro de Garagem</a>
@@ -75,7 +72,7 @@
       <div class="intro-text">
         <div class="intro-lead-in" >Bem Vindo ao Automóveis Flux</div>
         <div class="intro-heading text-uppercase">Prazer em Recebê-lo</div>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Mais SObre Nós</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#services">Serviços</a>
       </div>
     </div>
   </header>
