--- a/index.html
+++ b/index.html
@@ -309,8 +309,10 @@
                     </div>
                 </form>
             </div>
- <!-- footer -->
+
+            <!-- footer -->
             <div class="modal-footer">
+			  <a href="controlegaragem.html"> Já possui uma garagem?</a>
                     <button type="button" id="btnCadastrar" class="btn btn-success btn-block" data-loading-text="Cadastrando...">Salvar Cadastro</button>
             </div>
             <!-- end footer -->
@@ -323,7 +325,7 @@
         </div>
     </div>
 </div>
-
+<!--  end-Modal -->
 <!--  end-Modal form cadastro garagem  -->
 
 
