--- a/mostrar.html
+++ b/mostrar.html
@@ -42,9 +42,9 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav text-uppercase ml-auto">
 
-          <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" data-toggle="modal">Cadastro de Garagem</a>
-          </li>
+         <li class="nav-item">
+            <a class="nav-link js-scroll-trigger"  href="cadastrogaragem.html" >Cadastro Garagem</a>
+          </li>  
 
           <li class="nav-item">
             <a class="nav-link js-scroll-trigger"  data-toggle="modal" data-target="#exampleModal">login </a>
