--- a/index.html
+++ b/index.html
@@ -110,8 +110,8 @@
           <i class="fa fa-cog fa-spin fa-8x fa-fw" aria-hidden="true"></i>
           <span class="sr-only">Saving. Hang tight!</span>
     
-          <h4 class="service-heading">Segurança no pagamento</h4>
-          <p class="text-muted">Você faz um negócio com uma marca reconhecida pela excelência e valorização do cliente.</p>
+          <a href="controlegaragem.html"><h4 class="service-heading">Controle de garagem</h4></a>
+          <p class="text-muted">Edite e Controle sua garagem.</p>
         </div>
       </div>
     </div>
