--- a/cadastrarcarro.html
+++ b/cadastrarcarro.html
@@ -63,7 +63,7 @@
       
       <div class="intro-text">
         <a href=""><div class="intro-lead-in">Automóveis Flux</div></a>
-        <div class="intro-heading text-uppercase">Cadastro de garagem</div>
+        <div class="intro-heading text-uppercase">Cadastro de Carro</div>
       
 
 
