--- a/controlegaragem.html
+++ b/controlegaragem.html
@@ -63,8 +63,8 @@
         <a href=""><div class="intro-lead-in">Automóveis Flux</div></a>
         <div class="intro-heading text-uppercase"> Edite</div>
         <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="cadastrarcarro.html"> Cadastrar carro </a>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#intermediarios"> Editar dados garagem</a>
-        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="#luxo"> Editar dados Carros</a>        
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="editargaragem.html"> Editar dados garagem</a>
+        <a class="btn btn-primary btn-xl text-uppercase js-scroll-trigger" href="editarcarros.html"> Editar dados Carros</a>        
 
       </div>
       
@@ -126,71 +126,7 @@
 <!--  end-Modal -->
 
 
-<!-- Modal -->
 
-  <div class="modal fade" id="cadas1" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel">
-    <div class="modal-dialog" role="document">
-        <div class="modal-content">
-            <div class="modal-header">
-                <h5 class="modal-title" id="exampleModalLabel" >Cadastre-se</h5>
-                <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span> </button>
-            </div>
-            <!-- body -->
-            <div class="modal-body">
-                <form>
-                    <div class="form-group">
-                        <label for="inputName">Nome:</label> 
-                        <input type="text" class="form-control" id="nome" placeholder="Nome Completo" ng-model="cadastroNome" required="autofocus">  
-                    </div>
-
-                    <div class="form-group">
-                        <label for="inputCpf">CPF:</label> 
-                        <input type="text" class="form-control" id="cpf" placeholder="000.000.000-00" maxlength="14"  OnKeyPress="formatar('###.###.###-##', this)" required="autofocus">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="inputEmail">Email:</label> <input type="email" class="form-control" id="email" placeholder="exemplo@outlook.com" ng-model="cadastroEmail" required="autofocus">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="inputTel" >Telefone:</label> <input class="form-control" id="telefone" maxlength="13" placeholder=" (00) 00000-0000" OnKeyPress="formatar('##-#####-####', this)" required="autofocus">
-                    </div>
-
-                    <div class="form-group">
-                        <label for="inputSenha">Senha:</label> 
-                        <input type="password" class="form-control" id="inputSenha" placeholder="Senha" ng-model="cadastroSenha" required="autofocus">
-                    </div>
-                </form>
-            </div>
-            <!-- footer -->
-            <div class="modal-footer">
-                    <button type="button" id="btnCadastrar" class="btn btn-success btn-block" data-loading-text="Cadastrando...">Salvar Cadastro</button>
-            </div>
-            <!-- end footer -->
-
-            <!-- footer -->
-            <div class="modal-footer">
-                    <button type="button" class="btn btn-danger btn-block" class="close" data-dismiss="modal" aria-label="Close" > Cancelar</button>
-            </div>
-            <!-- end footer -->
-        </div>
-    </div>
-</div>
-<!--  end-Modal -->
-
-<!--  script que realiza o formato tanto do cpf-telefone -->
-<script>
-function formatar(mascara, documento){
-  var i = documento.value.length;
-  var saida = mascara.substring(0,1);
-  var texto = mascara.substring(i)
-  
-  if (texto.substring(0,1) != saida){
-            documento.value += texto.substring(0,1);
-  }  
-}
-</script>
-<!--   fim do script  -->
 
 
   <!-- Bootstrap core JavaScript -->
