--- a/cadastrarcarro.html
+++ b/cadastrarcarro.html
@@ -67,6 +67,104 @@
       
 
 
+
+
+
+
+
+<form class="container" method="post" enctype="multipart/form-data">
+	
+    <fieldset>
+		
+		<legend>Dados para Incluir Veículo</legend>		
+		
+		<label>Nome do Anúncio:</label>
+		<div class="form-group">
+			<input type="text" name="nomeAnuncio" class="form-control" placeholder="Ford Fusion Preto 2017 Flex Quatro Portas" required/>
+		</div>
+		
+		<div class="form-group">
+         <label>Marca: </label>
+			<select name="marca" id="marca" title="Marca" class="form-control" required>
+				<option selected disabled>Selecione a Marca</option>
+				<?php foreach ($marcas as $marca) :?>
+					<option value="<?= $marca['id']?>"><?= $marca['nome']?></option>
+				<?php endforeach ?>
+			</select>
+    	</div>
+
+		<div class="form-group">
+			<label>Modelo: </label>
+			<select name="modelo" id="modelo" title="modelo" class="form-control" required>
+				<option selected disabled>Selecione o Modelo</option>
+			</select>
+		</div>
+
+		<div class="form-group">          
+		  <label>Cor: </label>
+			<input type="text" name="cor" class="form-control" placeholder="Digite aqui a Cor" required>
+        </div>
+		
+		<div class="form-group">
+          <label>Placa: </label>
+			<input type="text" name="placa" id="placa" class="form-control" placeholder="Digite aqui a Placa" required>
+        </div>
+		
+		<div class="form-group">
+			<label>Ano de Fabricação: </label>
+			<select name="anoFabricacao" id="anoFabricacao" title="anoFabricacao" class="form-control" required>
+				<option selected disabled>Selecione o Ano de Fabricação</option>
+			</select>
+		</div>	
+		
+		<div class="form-group">
+		  <label>Combustível: </label>
+			<select name="combustivel" id="combustivel" title="combustivel" class="form-control" required>
+					<option selected disabled>Selecione o Combustivel</option>
+					<?php foreach ($combustiveis as $combustivel) :?>
+						<option value="<?= $combustivel['id']?>"><?= $combustivel['nome']?></option>
+					<?php endforeach ?>
+				</select>
+   		 </div>
+		
+      </fieldset>
+		<label>Preço Diário: </label>		
+			<div class="input-group col-md-2">
+				<span class="input-group-addon">R$</span>
+				<input type="text" name="preco" id="preco" class="form-control" required aria-label="Amount (to the nearest dollar)" placeholder="100.000,00">
+			</div>
+		</br>
+
+		<legend>Concluir Cadastro</legend>
+      <div class="form-group">
+	        <button name="incluir" type="submit" class="btn btn-primary"/>Cadastrar Veículo</button>
+	 </div>	 
+</form>
+
+<script type="text/javascript" src="js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.maskmoney.min.js"></script>
+<script type="text/javascript" src="js/jquery.maskedinput.min.js"></script>
+
+<script src="js/gerarAnoVeiculo.js"></script>
+<script src="js/preencherMarcaModelo.js"></script>
+
+<script>
+	$(function($){
+		// Aqui fazemos uso do plugin MASKED INPUT		
+		$("#placa").mask("aaa-9999");		
+	});
+	$(document).ready(function()
+	{
+		$("#preco").maskMoney({
+			decimal: ".",
+			thousands: " "
+		});
+	});
+</script>
+
+
+
+
 <a class="navbar-brand" href="controlegaragem.html">Voltar</a>
 
   <!-- Footer -->
